--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+p {
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+}
+
+pre {
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+}
